[gd_scene load_steps=13 format=3 uid="uid://bhxs207u1q1q6"]

[ext_resource type="Script" uid="uid://b2g1ucsuey8ld" path="res://managers/game_manager/game_manager.gd" id="1_lh1k3"]
[ext_resource type="PackedScene" uid="uid://ccocan3mdcvgc" path="res://actors/player/player.tscn" id="2_dmudu"]
[ext_resource type="PackedScene" uid="uid://dbfvsn5y6752t" path="res://actors/ball/ball.tscn" id="3_f7s5u"]
[ext_resource type="PackedScene" uid="uid://d3k2n7a4xgrtu" path="res://scenery/wall/wall.tscn" id="3_xl6yf"]
[ext_resource type="PackedScene" uid="uid://bww8pnsxl7ov8" path="res://actors/enemy/enemy.tscn" id="4_1nr2e"]
[ext_resource type="PackedScene" uid="uid://btqdsmexfylpe" path="res://interface/score_manager/score_manager.tscn" id="6_q3g20"]
[ext_resource type="PackedScene" uid="uid://kltnt0m0xwoa" path="res://interface/round_start_counter/round_start_counter.tscn" id="7_3hdek"]
[ext_resource type="PackedScene" uid="uid://cwlqlssgprck0" path="res://interface/end_message/end_message.tscn" id="8_qtb8k"]
[ext_resource type="PackedScene" uid="uid://dlsy0p0gjm3ke" path="res://interface/pause_menu/pause_menu.tscn" id="9_53o11"]
[ext_resource type="PackedScene" uid="uid://u5j2ew26ciyt" path="res://interface/pause_message/pause_message.tscn" id="10_vhlkh"]
[ext_resource type="Script" uid="uid://pn024wxydirc" path="res://managers/game_manager/game_manager_sm.gd" id="11_a1swe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7s5u"]
size = Vector2(1056, 800)

[node name="GameManager" type="Node" node_paths=PackedStringArray("_game_area", "_ball", "_enemy", "_score_manager", "_round_start_counter", "_end_message", "_pause_menu", "_pause_message")]
script = ExtResource("1_lh1k3")
_game_area = NodePath("GameArea")
_ball = NodePath("Actors/Ball")
_enemy = NodePath("Actors/Enemy")
_score_manager = NodePath("Interface/ScoreManager")
_round_start_counter = NodePath("Interface/RoundStartCounter")
_end_message = NodePath("Interface/EndMessage")
_pause_menu = NodePath("Interface/PauseMenu")
_pause_message = NodePath("Interface/PauseMessage")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="GameArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameArea"]
shape = SubResource("RectangleShape2D_f7s5u")
debug_color = Color(0.597763, 0, 0.701961, 0)

[node name="Actors" type="Node" parent="."]

[node name="Player" parent="Actors" instance=ExtResource("2_dmudu")]
position = Vector2(-336, 0)

[node name="Ball" parent="Actors" instance=ExtResource("3_f7s5u")]

[node name="Enemy" parent="Actors" instance=ExtResource("4_1nr2e")]
position = Vector2(336, 0)

[node name="Walls" type="Node" parent="."]

[node name="Wall" parent="Walls" instance=ExtResource("3_xl6yf")]
position = Vector2(0, -360)

[node name="Wall2" parent="Walls" instance=ExtResource("3_xl6yf")]
position = Vector2(0, 360)

[node name="Interface" type="Node" parent="."]

[node name="ScoreManager" parent="Interface" instance=ExtResource("6_q3g20")]

[node name="RoundStartCounter" parent="Interface" instance=ExtResource("7_3hdek")]
offset_top = -128.0
offset_bottom = -88.0

[node name="EndMessage" parent="Interface" instance=ExtResource("8_qtb8k")]
visible = false

[node name="PauseMenu" parent="Interface" instance=ExtResource("9_53o11")]
process_mode = 2
visible = false

[node name="PauseMessage" parent="Interface" instance=ExtResource("10_vhlkh")]
offset_left = -448.0
offset_top = -320.0
offset_right = -408.0
offset_bottom = -280.0

[node name="GameManagerSM" type="Node" parent="." node_paths=PackedStringArray("_game_manager")]
script = ExtResource("11_a1swe")
_game_manager = NodePath("..")
